Fix checkbox spacing in popup

--- a/chromium/pages/popup/style.css
+++ b/chromium/pages/popup/style.css
@@ -83,14 +83,6 @@ input[type='checkbox'] {
   vertical-align: middle;
 }
 
-.rule input[type='checkbox'] {
-  margin: 0;
-}
-
-.rule span {
-  margin-left: 0.6em;
-}
-
 .rule img.remove {
   float: right;
 }
